--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Explore a modern and innovative portfolio card showcasing my latest web development and design projects. 
+    Get inspired and discover my creative solutions in frontend development, AI-ML, UI/UX design, and more. Visit now to see my work!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Portofolio Card ~ Jayden</title>
