--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Projected Skills</p>
             </div>
             <div class="profile">
-                <img src="profile.png">
+                <img src="profile.png" alt="">
             </div>
             <div class="info">
                 <div class="count">
@@ -139,6 +139,7 @@
                 <a href="">MySQL & WordPress</a>
                 <a href="">MS-365 & iWork</a>
                 <a href="">GitHub & Google Colab</a>
+                <a href="">SEO optimization & Web analytics</a>
                 <a href="">Team problem solving & Team Leadership</a>
                 <a href="">Time management & Project planning</a>
                 <a href="">User design & performance metrics</a>
