--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Portofolio Card ~ Jayden</title>
+    <title>Official Portfolio Card ~ Jayden</title>
 </head>
 
 <body>
