--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="info">
                 <div class="count">
                     <i class="ri-lightbulb-line"></i>
-                    <p>29</p>
+                    <p>30</p>
                 </div>
                 <p>Projected Skills</p>
             </div>
@@ -142,7 +142,7 @@
                 <a href="">SEO optimization & Web analytics</a>
                 <a href="">Team problem solving & Team Leadership</a>
                 <a href="">Time management & Project planning</a>
-                <a href="">User design & performance metrics</a>
+                <a href="">User design & Performance metrics</a>
                 <a href="">Communication & Networking</a>
                 <a href="">Active listener & Decision Making</a>
                 <a href="">Creativity & Adaptibility</a>
