--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="info">
                 <div class="count">
                     <i class="ri-folder-open-line"></i>
-                    <p>6</p>
+                    <p>8</p>
                 </div>
                 <p>Projects</p>
             </div>
@@ -91,6 +91,8 @@
                 <a href="https://github.com/JadeFerrao/Pre-trained-CNN-">🧬 DR Image Analysis Using Tensorflow </a>
                 <a href="https://jadeferrao.github.io/RMS--Kiosk-based-menu-ordering/">📃 Kiosk Based Menu Ordering</a>
                 <a href="#">👨‍💻 Online Attendance System</a>
+                <a href="https://jadeferrao.github.io/mydashboard.github.io/">📊 Responsive FrontEnd Dashboard</a>
+                <a href="https://jadeferrao.github.io/mydexico.github.io/">🏢 FrontEnd RealEstate Site</a>
                 <a href="https://jadeferrao.github.io/FLYSAFE_GAME/">🎮 Web Browser game</a>
                 <a href="https://fyxvsg-5173.csb.app">🌦️ Weather App</a>
                 <a href="https://jadeferrao.github.io/My-Card-portfolio.github.io/#hire">🤵🏽‍♂️ Card Portfolio</a>
