--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="tab-content active-tab-content" id="tab-1">
-            <p>🤖 Passionate about AI, XR, and R&D, I'm committed to making a meaningful impact. Embracing challenges and exploring new technologies, I'm currently diving deep into AI/ML.</p>
+            <p>🤖 Passionate about AI, XR, and R&D. Embracing challenges and exploring AI/ML.</p>
             <br>
             <h3>Passion/Hobbies/Interests💎</h3>
             <div class="vote">
