--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/Users/jaydenferrao/Desktop/Project/Portofolio jade/JF.png" type="image/png">
     <title>Official Portfolio Card ~ Jayden</title>
 </head>
 
