--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="comment">
                     <img src="company1.png">
                     <div>
-                        <h4>IO Droplet, Goa</h4>
+                        <h4>IO Droplet, Goa - Intern</h4>
                         <p>
                             <ul>
                                 <li>Developed a dashboard with HTML, CSS (Bootstrap), Javascript/JQuery, and Chart.js.</li>
