--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Explore a modern and innovative portfolio card showcasing my latest web development and design projects. 
-    Get inspired and discover my creative solutions in frontend development, AI-ML, UI/UX design, and more. Visit now to see my work!">
+    Get inspired and discover my creative solutions in frontend development, AI-ML and more. Visit now to see my work!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
@@ -68,7 +68,7 @@
         </div>
 
         <div class="tab-content active-tab-content" id="tab-1">
-            <p>🤖 Passionate about AI, XR, and R&D. Embracing challenges and exploring AI/ML.</p>
+            <p>🤖 Passionate about AI innovation, product management and agile development for user-centric solutions.</p>
             <br>
             <h3>Passion/Hobbies/Interests💎</h3>
             <div class="vote">
@@ -118,7 +118,7 @@
                                 <li>Designed and developed a WordPress site for a marketing agency, collaborating with designers to revamp the site with a modern look and provided a comprehensive client walkthrough on using Elementor with WordPress for easy customization. Delivered the project within the set deadline and worked closely with the QA team to resolve all bugs.</li>
                                 <li>Redesigned a music app using HTML5, CSS3, JavaScript and PHP; integrating curated Spotify playlists via the Spotify API. Collaborated with QA and development teams for code reviews and bug fixes, improving code efficiency by 10%..</li>
                                 <li>Contributed to a live streaming and booking platform built with React, conducting POCs on new tools for integration. Partnered with designers and QA to resolve bugs by 20%, adhering to agile methodologies and best practices.</li>
-                            </ul>
+                                <li>Developed a React Native parcel delivery app that enables users to send and receive parcels within their area. Conducted POCs for tools to be integrated, participated in regular code reviews with senior developers, and resolved 30% of reported bugs, significantly improving code efficiency and performance.</li>                            </ul>
                         </p>    
                     </div>
                 </div> 
