--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/Users/jaydenferrao/Desktop/portfolio/Jayden-Ferrao.github.io/JF.png" sizes="16x16" type="image/x-icon">
+    <link rel="icon" href="JF.png" sizes="16x16" type="image/x-icon">
     <title>Official Portfolio Card ~ Jayden</title>
 </head>
 
