--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a href="">🎵 Listening to Music</a>
                 <a href="">📖 Reading / 🎞️ Watching Movies</a>
                 <a href="">⚽️ Football / 🏸 Badminton / 🏀 Basketball </a>
-                <a href="">🏞️ Loves Travelling, 🥾 Hiking / 🏔️ Trekking</a>
+                <a href="">🏞️ Loves Travelling / 🥾 Hiking / 🏔️ Trekking</a>
             </div>
         </div>
 
