--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="wip-content">
             <p>Hey there! My portfolio is currently being updated. Hang tight, awesome things are coming soon! 💻✨</p>
-            <img src="https://i.imgur.com/3Zp0U4v.jpg" alt="Funny work in progress meme" class="wip-meme">
+            <img src="https://makeameme.org/meme/work-in-progress-de8c72e324" alt="Funny work in progress meme" class="wip-meme">
             <p>Meanwhile, you can reach me on <a href="https://www.linkedin.com/in/jaydenferrao/">LinkedIn</a> or <a href="https://github.com/JadeFerrao">GitHub</a>.</p>
         </div>
     </div>
