--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <h4 class="h4 service-item-title">Others</h4>
 
                 <p class="service-item-text">
-                  I just love taking amazing pics of anything and everything. I am an F1 enthusiast too who enjoys listening to music, reading and watching movies, playing football, badminton, and basketball, and loves travelling, hiking, and trekking.
+                  I love photography, F1, music, movies, reading, sports, traveling, hiking, trekking.
                 </p>
               </div>
 
@@ -759,7 +759,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="skill.png" alt="Skillbuilder" loading="lazy">
+                  <img src="skill.PNG" alt="Skillbuilder" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Skillbuilder</h3>
@@ -777,7 +777,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="pinit.png" alt="Pinit" loading="lazy">
+                  <img src="pinit.PNG" alt="Pinit" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Pinit - Goa</h3>
@@ -795,7 +795,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="tarmed.png" alt="tarmed" loading="lazy">
+                  <img src="tarmed.PNG" alt="tarmed" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Tarmed</h3>
@@ -831,7 +831,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="kiosk.jpg" alt="Kiosk" loading="lazy">
+                  <img src="kiosk.PNG" alt="Kiosk" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Kiosk Ordering Platform</h3>
@@ -921,7 +921,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="portfolio.png" alt="portfolio" loading="lazy">
+                  <img src="portfolio.PNG" alt="portfolio" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Portfolio</h3>
