--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="kiosk.PNG" alt="Kiosk" loading="lazy">
+                  <img src="kiosk.png" alt="Kiosk" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Kiosk Ordering Platform</h3>
@@ -921,7 +921,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="portfolio.PNG" alt="portfolio" loading="lazy">
+                  <img src="portfolio.png" alt="portfolio" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Portfolio</h3>
