--- a/index.html
+++ b/index.html
@@ -580,17 +580,18 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Web & App Development</h5>
-                <data value="60">60%</data>
+                <data value="65">65%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 60%;"></div>
+                <div class="skill-progress-fill" style="width: 65%;"></div>
               </div>
 
               <ul class="skills-list">
                 <li>• HTML5 / CSS3 (Bootstrap)</li>
                 <li>• JavaScript & jQuery</li>
                 <li>• Vue.js & Chart.js</li>
+                <li>• React.js / React Native / Next.js</li>
                 <li>• MUI & Tailwind</li>
                 <li>• Expo & Supabase</li>
               </ul>
@@ -621,11 +622,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Project & Team Management</h5>
-                <data value="70">70%</data>
+                <data value="75">75%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 75%;"></div>
               </div>
 
               <ul class="skills-list">
